--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [workspace]
 
 resolver = "2"
-members = ["analyse", "pools", "check"]
+members = ["analyse", "pools", "check", "arb", "crates/tokens"]
 
 [workspace.dependencies]
 uniswap-v3-sdk = { version = "2.2.0", features = ["extensions", "std"] }
@@ -11,3 +11,5 @@ alloy = { version = "0.5", features = ["contract"] }
 alloy-primitives = "0.8"
 alloy-sol-types = "0.8"
 tokio = { version = "1.40", features = ["full"] }
+
+tokens = { path = "./crates/tokens" }
