--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,13 @@
 [workspace]
 
 resolver = "2"
-members = ["analyse", "pools", "check", "rb", "crates/tokens"]
+members = [
+    "analyse", 
+    "pools", 
+    "check", 
+    "rb", 
+    "crates/tokens",
+    "crates/uniswapv3pool"]
 
 [workspace.dependencies]
 uniswap-v3-sdk = { version = "2.2.0", features = ["extensions", "std"] }
@@ -13,3 +19,4 @@ alloy-sol-types = "0.8"
 tokio = { version = "1.40", features = ["full"] }
 
 tokens = { path = "./crates/tokens" }
+uniswapv3pool = { path = "./crates/uniswapv3pool" }
