move rb to bin and add commands dir

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,12 +2,13 @@
 
 resolver = "2"
 members = [
-    "analyse", 
-    "pools", 
-    "check", 
-    "rb", 
+    "analyse",
+    "pools",
+    "check",
+    "bin/rb",
     "crates/tokens",
-    "crates/uniswapv3pool"]
+    "crates/uniswapv3pool",
+]
 
 [workspace.dependencies]
 uniswap-v3-sdk = { version = "2.2.0", features = ["extensions", "std"] }
