add address and URL to prelude

--- a/bin/rbtr/Cargo.toml
+++ b/bin/rbtr/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 toml = { workspace = true }
 serde = { workspace = true }
+eyre = { workspace = true }
+alloy = { workspace = true }
+
+lib = { path = "../../crates/lib" }
