--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -17,6 +17,12 @@ jobs:
         uses: dtolnay/rust-toolchain@stable
       - name: Rust Cache Action
         uses: Swatinem/rust-cache@v2
+      - name: Install anvil
+        uses: baptiste0928/cargo-install@v2
+        with:
+          crate: anvil
+          git: https://github.com/foundry-rs/foundry
+          commit: nightly
       - name: Run tests
         shell: bash
         run: cargo test
