--- a/bin/rbtr/Cargo.toml
+++ b/bin/rbtr/Cargo.toml
@@ -8,5 +8,9 @@ toml = { workspace = true }
 serde = { workspace = true }
 eyre = { workspace = true }
 alloy = { workspace = true }
+tokio = { workspace = true }
+tokio-util = "0.7.12"
+actix = "0.13.5"
+ctrlc = "3.1.0"
 
 lib = { path = "../../crates/lib" }
