--- a/bin/rbtr/Config.toml
+++ b/bin/rbtr/Config.toml
@@ -1,4 +1,13 @@
-url_one = "https://rpc.immutable.com"
-url_two = "https://rpc.immutable.com"
-token_one = "0xD67cc11151dBccCC424A16F8963ece3D0539BD61"
-token_two = "0xD67cc11151dBccCC424A16F8963ece3D0539BD61"
+tick_rate = "5s"
+
+[[monitors]]
+rpc_url = "https://rpc.immutable.com"
+factory = "0x56c2162254b0E4417288786eE402c2B41d4e181e"
+token_one = "0x52A6c53869Ce09a731CD772f245b97A4401d3348"
+token_two = "0x3A0C2Ba54D6CBd3121F01b96dFd20e99D1696C9D"
+
+[[monitors]]
+rpc_url = "https://rpc.immutable.com"
+factory = "0x56c2162254b0E4417288786eE402c2B41d4e181e"
+token_one = "0x52A6c53869Ce09a731CD772f245b97A4401d3348"
+token_two = "0x3A0C2Ba54D6CBd3121F01b96dFd20e99D1696C9D"
